# sscan

./: .gitattributes  Cargo.toml  LICENSE.md  LUA_LICENSE.md  OPEN_SOURCE_LICENSES.html  OPEN_SOURCE_LICENSES.md  README.md  SBOM.spdx  about.hbs  about.toml  deny.toml
.github/ISSUE_TEMPLATE/: attribution-issues.md  bug_report.md  documentation-issues.md  feature_request.md
.github/workflows/: rust.yml
examples/: scan_folder.lua
src/: actors.rs  lib.rs  lua.rs  lua_api.rs  lua_vm.rs  macros.rs  main.rs  userscript_api.rs  yara_engine.rs
src/actors/: lua_vm.rs  queue.rs  scanmgr.rs  user_engine.rs
src/actors/lua_vm/: error.rs  messages.rs
src/actors/queue/: data_item.rs  error.rs  messages.rs
src/actors/scanmgr/: error.rs  messages.rs  reply.rs
src/actors/user_engine/: error.rs  messages.rs
src/lua/: version_info.rs
src/lua_api/: messages.rs  version_info.rs
src/lua_vm/: messages.rs  mod.rs
src/lua_vm/userscript_apis/: mod.rs  version_info.rs
src/system/: messages.rs  mod.rs
src/userscript_api/: about_api.rs  fs_api.rs  help_system.rs  process_api.rs  queue.rs  queue_api.rs  scanmgr_api.rs  user_engine.rs  user_engine_api.rs
src/userscript_api/fs_api/: error.rs  path_obj.rs
src/userscript_api/help_system/: error.rs
src/userscript_api/help_system/topics/: __generic.txt  about.txt  fs.txt  path.txt  queue.rs  queue.txt  scanmgr.txt  topic.generic.md  topic.generic.txt  topic.queue.txt  topic.user_engine.md  topic.user_engines.txt  user_engines.rs  user_engines.txt
src/userscript_api/process_api/: windows.rs
src/userscript_api/scanmgr_api/: scanresult.rs
src/yara_engine/: messages.rs  mod.rs  result.rs
tests/: register_api.rs  register_user_engines.rs
tests/register_api/: api_test.lua  topic.counter.md
tests/register_user_engines/: engine_alwaysfalse.lua  engine_alwaystrue.lua  engine_helloworld.lua
