[package]
# Crate Information
name = "sscan"
version = "0.8.0"
authors = ["ctx400"]
description = "A scriptable file/process/network scanner"
repository = "https://github.com/ctx400/sscan"
readme = "README.md"
license = "MIT"

# crates.io metadata
keywords = ["scanner", "yara", "lua", "security", "scan"]
categories = ["command-line-utilities"]
publish = true

# Minimum supported Rust edition
edition = "2021"

[dependencies]
# Error Handling
anyhow = "1.0"
thiserror = "2"

# Actor Frameworks
kameo = "0.13"

# Scan engines
yara-x = "0.12.0"

# Command-line Interfaces
[dependencies.clap]
version = "4.5.27"
features = ["derive"]

# Async Runtimes
[dependencies.tokio]
version = "1"
features = ["full"]

# Lua scripting support
[dependencies.mlua]
version = "0.10.2"
features = ["lua54", "vendored", "anyhow", "send", "error-send", "async"]

# Serialization support
[dependencies.serde]
version = "1.0"
features = ["derive"]
