[package]
# Crate Information
name = "sscan"
version = "0.16.0"
authors = ["ctx400"]
description = "A scriptable file/process/network scanner"
repository = "https://github.com/ctx400/sscan"
readme = "README.md"
license = "MIT"

# crates.io metadata
keywords = ["scanner", "yara", "lua", "security", "scan"]
categories = ["command-line-utilities"]
publish = true

# Minimum supported Rust edition
edition = "2021"

# Error Handling
[dependencies]
anyhow = "1.0"
thiserror = "2"

# Actor Frameworks
kameo = "0.14"

# Scan engines
yara-x = "0.13.0"

# Command-line Interfaces
[dependencies.clap]
version = "4.5.27"
features = ["derive", "wrap_help"]

# Async Runtimes
[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

# Lua scripting support
[dependencies.mlua]
version = "0.10.2"
features = ["lua54", "vendored", "anyhow", "send", "error-send", "async"]

# Serialization
[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

# Windows API
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Threading",
]
